Update project without secrets